Smart Lock: Do not start multiple auth attempts.

EasyUnlockService previously re-instantiated an EasyUnlockAuthAttempt
every time the user profile picture was tapped or clicked. This was
unnecessary, and caused situations where the account's cryptohome
could not be decrypted.

Bug: 896045
Change-Id: I959ed3209caeb8d83519c8300d863a6288984740
Reviewed-on: https://chromium-review.googlesource.com/c/1285118
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600190}
Former-commit-id: faf0b7f8bab4d4b321646a98d32186db9d7a5479